# elastic-rings

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
examples/: beam.prms  ring.prms
include/: modded_periodic_functions.h  parameters.h  postprocessing.h  subdivided_cylinder.h
src/: solve-ring_nonlinear.cpp
